chore: increase test coverage